--- a/doc/BattleBots/BattleBots/nbproject/project.properties
+++ b/doc/BattleBots/BattleBots/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=BattleBots
+application.vendor=mkp003
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=/student/mkp003/CMPT370/370-16A5/doc/BattleBots
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1478982849000
@@ -29,11 +30,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/BattleBots.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.BattleBots-src=../../../../../../../../student/mkp003/CMPT370/370-16A5/doc/BattleBots/src
+file.reference.json-simple-1.1.jar=/student/mkp003/CMPT370/370-16A5/doc/json-simple-1.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
