--- a/doc/BattleBots/nbproject/project.properties
+++ b/doc/BattleBots/nbproject/project.properties
@@ -4,10 +4,10 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=BattleBots
-application.vendor=mkp003
+application.vendor=wjr992
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=bin;
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=/student/mkp003/CMPT370/370-16A5/doc/BattleBots
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1478982849000
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1479069437000
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,8 +32,8 @@ dist.jar=${dist.dir}/BattleBots.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.BattleBots-src=../../../../../../../../student/mkp003/CMPT370/370-16A5/doc/BattleBots/src
-file.reference.json-simple-1.1.jar=/student/mkp003/CMPT370/370-16A5/doc/json-simple-1.1.jar
+file.reference.BattleBots-src=src
+file.reference.json-simple-1.1.jar=../json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
