--- a/doc/BattleBots/nbproject/project.properties
+++ b/doc/BattleBots/nbproject/project.properties
@@ -7,7 +7,7 @@ application.title=BattleBots
 application.vendor=wjr992
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1479069437000
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1479330727000
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -61,6 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+main.class=model.GameBoard
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
